--- a/src/app/features/cotizaciones/crear/step2/step2-datos.component.html
+++ b/src/app/features/cotizaciones/crear/step2/step2-datos.component.html
@@ -2,9 +2,7 @@
 
 <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
 
-  <!-- ===========================
-       CLIENTE
-  ============================ -->
+  <!-- CLIENTE -->
   <div>
     <label class="form-label">Cliente *</label>
 
@@ -21,9 +19,7 @@
     </div>
   </div>
 
-  <!-- ===========================
-       CONTACTO
-  ============================ -->
+  <!-- CONTACTO -->
   <div>
     <label class="form-label">Contacto *</label>
 
@@ -40,9 +36,7 @@
     </div>
   </div>
 
-  <!-- ===========================
-       PROYECTO
-  ============================ -->
+  <!-- PROYECTO -->
   <div>
     <label class="form-label">Proyecto *</label>
 
@@ -61,9 +55,6 @@
 
 </div>
 
-<!-- ========================================================= -->
-<!-- =============== DATOS DE LA COTIZACIÓN ================== -->
-<!-- ========================================================= -->
 
 <h3 class="section-title mt-10">Datos de la cotización</h3>
 
@@ -121,15 +112,6 @@
 
 </div>
 
-<!-- ========================================================= -->
-<!-- =============== TRABAJO DE CAMPO ======================== -->
-<!-- ========================================================= -->
-
-
-
-<!-- ===================== -->
-<!-- ======= MODALES ===== -->
-<!-- ===================== -->
 
 <modal-crear-cliente #modalCliente (creado)="crearCliente($event)">
 </modal-crear-cliente>
