--- a/src/app/shared/ui/modals/modal-crear-contacto/modal-crear-contacto.component.html
+++ b/src/app/shared/ui/modals/modal-crear-contacto/modal-crear-contacto.component.html
@@ -9,9 +9,9 @@
   <label class="form-label">Email</label>
   <input class="input mb-4" [(ngModel)]="email">
 
-  <div class="flex justify-end gap-2 mt-6">
-    <button class="btn-secondary" (click)="hide()">Cancelar</button>
-    <button class="btn-primary" (click)="guardar()">Guardar</button>
+  <div class="flex justify-end gap-3 mt-8">
+    <button class="btn btn-outline" (click)="hide()">Cancelar</button>
+    <button class="btn btn-primary" (click)="guardar()">Guardar</button>
   </div>
 
 </ui-modal>
